# text_to_midi

./: README.md  instruments.yaml  pyproject.toml  sample.midi  sample.txt
text_to_midi/: __init__.py
